SSDM-14228 : timezone of timestamp changed to database timezone